[metadata]
name = mfpymake
version = attr: pymake.config.__version__
description = pymake is a Python package to compile MODFLOW-based models.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
author = Joseph D. Hughes
author_email = modflow@usgs.gov
maintainer = Joseph D. Hughes
maintainer_email = jdhughes@usgs.gov
license = CC0
license_files = LICENSE.md
platform = Windows, Mac OS-X, Linux
keywords = MODFLOW, groundwater, hydrogeology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/modflowpy/pymake
download_url = https://pypi.org/project/mfpymake
project_urls =
    Documentation = https://mfpymake.readthedocs.io
    Bug Tracker = https://github.com/modflowpy/pymake/issues
    Source Code = https://github.com/modflowpy/pymake

[options]
include_package_data = True  # includes files listed in MANIFEST.in
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    requests
    networkx >= 2.6.3
    meson
    ninja
    pydotplus

[options.package_data]
pymake = utils/usgsprograms.txt

[options.entry_points]
console_scripts =
    make-program = pymake.cmds.build:main
    make-code-json = pymake.cmds.createjson:main

[flake8]
exclude =
    .git
    __pycache__
    build
    dist
    examples
    autotest
ignore =
# https://flake8.pycqa.org/en/latest/user/error-codes.html
    # 'module' imported but unused
    F401
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    # do not use bare 'except'
    E722
    # ambiguous variable name
    E741
    # whitespace before ':'
    E203
    # line break before binary operator
    W503
statistics = True
